# deferred-rendering

./: CMakeLists.txt  README.md  config.h.in
cmake/Modules/: FindGLM.cmake
src/: app.cpp  app.hpp  camera.cpp  config.h  glfw.cpp  main.cpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp
src/scenes/: controllable_camera.cpp  controllable_camera.hpp  deferred_render_benchmark.cpp  deferred_render_benchmark.hpp
src/shaders/: deferred_lighting.cpp  deferred_lighting.hpp  forward_phong.cpp  forward_phong.hpp  lamp.hpp  skybox.cpp  skybox.hpp  text.cpp  text.hpp
src/shaders/glsl/: deferred_lighting.fs  deferred_lighting_pass.fs  deferred_lighting_pass.vs  lamp.vs  phong.fs  phong.fs.bak  skybox.vs  test.fs
src/util/: random.hpp  shape_generator.hpp
